application/brennoflavio/minatto-pr-preview/1-preview/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: "minatto-1-preview"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      imagePullSecrets:
        - name: gcr-secret
      containers:
        - name: frontend
          image: ghcr.io/brennoflavio/minatto-frontend:preview-1-d2d4a1d-1767372307 # {"$imagepolicy": "minatto-1-preview:frontend"}
          resources:
            limits:
              cpu: 500m
              memory: 1Gi
            requests:
              cpu: 500m
              memory: 1Gi
          ports:
            - containerPort: 80
