application/brennoflavio/minatto-pr-preview/1-preview/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: "minatto-1-preview"
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
